# pick_n_place

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launch/: pick_n_place.launch
src/find_object_2d/.svn/: all-wcprops  entries
src/find_object_2d/include_x/find_object/.svn/: all-wcprops  entries
src/find_object_2d/include_x/find_object/utilite/.svn/: entries
src/find_object_2d/launch/: find_object_3d.launch  find_object_3d.launch~
src/find_object_2d/launch/.svn/: entries
src/find_object_2d/msg/.svn/: entries
src/find_object_2d/src/: PoseFile.h  PoseFile.h~  tf_example_node.cpp
src/find_object_2d/src/.svn/: all-wcprops  entries
src/find_object_2d/src_x/.svn/: all-wcprops  entries
src/find_object_2d/src_x/json/.svn/: entries
src/find_object_2d/src_x/resources/.svn/: entries
src/find_object_2d/src_x/rtabmap/.svn/: entries
src/find_object_2d/src_x/ui/.svn/: entries
src/find_object_2d/src_x/utilite/.svn/: all-wcprops  entries
src/torque_example/: CMakeLists.txt
src/torque_example/launch/: project15.launch
src/torque_example/src/: ltr.cpp  project15.cpp  project15.cpp.nov9  project15.cpp.save  project15.cpp.save.1  project15.cpp_backup  project15.cpp_backup2  project15.cpp_prefinal  project15.cpp_prefinal2  project15.cppy
